--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Goggle Games</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <script src="app.js"></script>
     <h1>Welcome to Goggle Games!</h1>
     <p>Play fun games here!</p>
     <!-- Your game code or links to games go here -->
