--- a/index.html
+++ b/index.html
@@ -7,9 +7,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <script src="app.js"></script>
     <h1>Welcome to Goggle Games!</h1>
-    <p>Play fun games here!</p>
-    <!-- Your game code or links to games go here -->
+    <p>Click the button to start a game!</p>
+
+    <!-- Start Button -->
+    <button id="startButton">Start Game</button>
+
+    <!-- Game Area (hidden initially) -->
+    <div id="gameArea" class="game-area" style="display: none;">
+        <p>Game is starting...</p>
+        <!-- Add actual game content here -->
+    </div>
+
+    <script src="app.js"></script>
 </body>
 </html>
