--- a/index.html
+++ b/index.html
@@ -4,32 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Goggle Games</title>
-    <link rel="stylesheet" href="style.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            background-color: #121212;
+            color: white;
+        }
+        h1 {
+            margin-top: 20px;
+        }
+        .game-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 80vh;
+        }
+        iframe {
+            border: none;
+            width: 640px;
+            height: 480px;
+            border-radius: 10px;
+            box-shadow: 0px 0px 15px rgba(255, 255, 255, 0.2);
+        }
+    </style>
 </head>
 <body>
-    <h1>Welcome to Goggle Games!</h1>
-    <p>Click the button to start a game!</p>
 
-    <!-- Start Button -->
-    <button id="startButton">Start Number Guessing Game</button>
-    <button id="startPacman">Start Pac-Man Game</button>
+    <h1>Welcome to Goggle Games</h1>
+    <p>Play classic games directly on your browser!</p>
 
-    <!-- Game Area (hidden initially) -->
-    <div id="gameArea" class="game-area" style="display: none;">
-        <p>Guess a number between 1 and 100:</p>
-        <input type="number" id="guessInput" placeholder="Enter your guess" />
-        <button id="submitGuess">Submit Guess</button>
-        <p id="message"></p>
-        <p>Attempts: <span id="attempts">0</span></p>
-        <button id="restartGame" style="display: none;">Restart Game</button>
+    <div class="game-container">
+        <iframe src="https://www.google.com/logos/2010/pacman10-i.html"></iframe>
     </div>
 
-    <div id="pacmanGameArea" class="game-area" style="display: none;">
-        <h2>Pac-Man Game</h2>
-        <canvas id="pacmanCanvas" width="400" height="400"></canvas>
-        <button id="restartPacmanGame" style="display: none;">Restart Pac-Man</button>
-    </div>
-
-    <script src="app.js"></script>
 </body>
 </html>
