--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <p>Play classic games directly on your browser!</p>
 
     <div class="game-container">
-        <iframe src="https://www.google.com/logos/2010/pacman10-i.html"></iframe>
+        <iframe src="https://www.free80sarcade.com/pacman.php"></iframe>
     </div>
 
 </body>
