--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <body>
 
     <h1>Welcome to Goggle Games</h1>
-    <p>Play Pac-Man below!</p>
+    <p>Play Flappy Bird below!</p>
 
     <div class="game-container">
         <canvas id="pacmanCanvas" width="400" height="400"></canvas>
