--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Goggle Games - Pac-Man</title>
+    <title>Goggle Games - Flappy Bird</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             text-align: center;
-            background-color: #121212;
+            background-color: #70c5ce;
             color: white;
+            margin: 0;
         }
         h1 {
             margin-top: 20px;
@@ -21,22 +22,22 @@
             height: 80vh;
         }
         canvas {
-            background-color: black;
+            background-color: #70c5ce;
             border-radius: 10px;
-            box-shadow: 0px 0px 15px rgba(255, 255, 255, 0.2);
+            box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
         }
     </style>
 </head>
 <body>
 
-    <h1>Welcome to Goggle Games</h1>
-    <p>Play Flappy Bird below!</p>
+    <h1>Flappy Bird</h1>
+    <p>Click or press SPACE to make the bird fly!</p>
 
     <div class="game-container">
-        <canvas id="pacmanCanvas" width="400" height="400"></canvas>
+        <canvas id="flappyCanvas" width="400" height="500"></canvas>
     </div>
 
-    <script src="pacman.js"></script>
+    <script src="flappy.js"></script>
 
 </body>
 </html>
