--- a/index.html
+++ b/index.html
@@ -3,41 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Goggle Games - Flappy Bird</title>
+    <title>Flappy Bird - Goggle Games</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            text-align: center;
             background-color: #70c5ce;
-            color: white;
             margin: 0;
-        }
-        h1 {
-            margin-top: 20px;
-        }
-        .game-container {
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 80vh;
+            height: 100vh;
+            overflow: hidden;
+            text-align: center;
         }
         canvas {
             background-color: #70c5ce;
+            border: 2px solid #fff;
             border-radius: 10px;
-            box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
+        }
+        h1 {
+            position: absolute;
+            top: 20px;
+            color: white;
+            font-size: 30px;
+            margin: 0;
+        }
+        p {
+            color: white;
+            font-size: 18px;
         }
     </style>
 </head>
 <body>
-
     <h1>Flappy Bird</h1>
     <p>Click or press SPACE to make the bird fly!</p>
-
-    <div class="game-container">
-        <canvas id="flappyCanvas" width="400" height="500"></canvas>
-    </div>
+    <canvas id="flappyCanvas" width="400" height="500"></canvas>
 
     <script src="flappy.js"></script>
-
 </body>
 </html>
