--- a/index.html
+++ b/index.html
@@ -50,6 +50,25 @@
         #startMenu button:hover {
             background-color: #FFCA28;
         }
+        #gameOverMenu {
+            position: absolute;
+            top: 40%;
+            left: 50%;
+            transform: translateX(-50%);
+            text-align: center;
+            display: none;
+        }
+        #gameOverMenu button {
+            padding: 15px 30px;
+            font-size: 20px;
+            background-color: #FFEB3B;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        #gameOverMenu button:hover {
+            background-color: #FFCA28;
+        }
     </style>
 </head>
 <body>
@@ -59,6 +78,11 @@
         <button id="startButton">Start Game</button>
     </div>
     <canvas id="flappyCanvas" width="400" height="500" style="display: none;"></canvas>
+    <div id="gameOverMenu">
+        <h1>Game Over</h1>
+        <p>Score: <span id="finalScore"></span></p>
+        <button id="restartButton">Restart Game</button>
+    </div>
 
     <script src="flappy.js"></script>
 </body>
