--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
         <h1>Flappy Bird</h1>
         <p>Click the button below to start the game!</p>
         <button id="startButton">Start Game</button>
+        <button id="shopButton">Shop</button> <!-- Shop button added here -->
     </div>
     <canvas id="flappyCanvas" width="400" height="500"></canvas>
     <div id="gameOverMenu">
