--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #70c5ce; /* Default background color */
+            background-color: black; /* Entire page background black */
             margin: 0;
             display: flex;
             justify-content: center;
@@ -18,14 +18,6 @@
             text-align: center;
         }
 
-        .game-container {
-            position: relative;
-            background-color: black; /* Black background for the game area */
-            padding: 20px;
-            border-radius: 15px;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5);
-        }
-
         h1 {
             color: white;
             font-size: 30px;
@@ -33,7 +25,7 @@
         }
 
         canvas {
-            background-color: #70c5ce;
+            background-color: #70c5ce; /* Canvas background color */
             border: 2px solid #fff;
             border-radius: 10px;
             display: none; /* Hidden until game starts */
@@ -97,9 +89,7 @@
         <button id="startButton">Start Game</button>
         <button id="shopButton">Shop</button> <!-- Shop button added here -->
     </div>
-    <div class="game-container">
-        <canvas id="flappyCanvas" width="400" height="500"></canvas>
-    </div>
+    <canvas id="flappyCanvas" width="400" height="500"></canvas>
     <div id="gameOverMenu">
         <h1>Game Over</h1>
         <p>Score: <span id="finalScore"></span></p>
