--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: black; /* Entire page background black */
+            background-color: black;
             margin: 0;
             display: flex;
             justify-content: center;
@@ -25,10 +25,10 @@
         }
 
         canvas {
-            background-color: #70c5ce; /* Canvas background color */
+            background-color: #70c5ce;
             border: 2px solid #fff;
             border-radius: 10px;
-            display: none; /* Hidden until game starts */
+            display: none;
             margin-top: 20px;
         }
 
@@ -64,7 +64,7 @@
             top: 50%;
             transform: translateY(-50%);
             text-align: center;
-            display: none; /* Hidden until game is over */
+            display: none;
         }
 
         #gameOverMenu button {
@@ -80,14 +80,24 @@
         #gameOverMenu button:hover {
             background-color: #FFCA28;
         }
+
+        #scoreDisplay {
+            color: white;
+            font-size: 24px;
+            position: absolute;
+            top: 20px;
+            left: 20px;
+            z-index: 10;
+        }
     </style>
 </head>
 <body>
+    <div id="scoreDisplay">Score: 0</div> <!-- Always visible score display -->
     <div id="startMenu">
         <h1>Flappy Bird</h1>
         <p>Click the button below to start the game!</p>
         <button id="startButton">Start Game</button>
-        <button id="shopButton">Shop</button> <!-- Shop button added here -->
+        <button id="shopButton">Shop</button>
     </div>
     <canvas id="flappyCanvas" width="400" height="500"></canvas>
     <div id="gameOverMenu">
