--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <title>Flappy Bird</title>
     <style>
         body {
-            background-color: #333;
+            background-color: black; /* Set the whole page background to black */
             margin: 0;
             padding: 0;
             font-family: Arial, sans-serif;
             text-align: center;
         }
         canvas {
-            background-color: #70c5ce;
+            background-color: #70c5ce; /* Keep the canvas background light blue */
             display: block;
             margin: 0 auto;
         }
